🐛 fix admin form view
- fix file-based api route to match path spec
- fix unreadable faint text color in css module
- use queryClientfrom root in createQuery to sync query cache across pages (not suggested by intellisense)

--- a/src/components/Admin.module.css
+++ b/src/components/Admin.module.css
@@ -204,6 +204,7 @@
 
 .td {
   padding: 1rem 1.25rem;
+  color: #000;
 }
 
 .userId {
